--- a/pqDSMViewerPanel.ui
+++ b/pqDSMViewerPanel.ui
@@ -28,8 +28,8 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>445</width>
-         <height>661</height>
+         <width>437</width>
+         <height>750</height>
         </rect>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -581,7 +581,7 @@
                <string>Standard Controls</string>
               </property>
               <layout class="QGridLayout" name="gridLayout_2">
-               <item row="0" column="1">
+               <item row="0" column="0">
                 <widget class="QToolButton" name="scPause">
                  <property name="text">
                   <string>pause</string>
@@ -592,7 +592,7 @@
                  </property>
                 </widget>
                </item>
-               <item row="0" column="2">
+               <item row="0" column="1">
                 <widget class="QToolButton" name="scPlay">
                  <property name="text">
                   <string>play</string>
@@ -603,21 +603,10 @@
                  </property>
                 </widget>
                </item>
-               <item row="0" column="0">
-                <widget class="QToolButton" name="scRestart">
-                 <property name="text">
-                  <string>restart</string>
-                 </property>
-                 <property name="icon">
-                  <iconset>
-                   <normaloff>:/pqWidgets/Icons/pqVcrFirst24.png</normaloff>:/pqWidgets/Icons/pqVcrFirst24.png</iconset>
-                 </property>
-                </widget>
-               </item>
-               <item row="0" column="3">
+               <item row="0" column="2">
                 <widget class="QToolButton" name="dsmWriteDisk">
                  <property name="text">
-                  <string>disk</string>
+                  <string>Switch DSM/Disk</string>
                  </property>
                 </widget>
                </item>
