Add TimeInformation option

--- a/pqDSMViewerPanel.ui
+++ b/pqDSMViewerPanel.ui
@@ -28,8 +28,8 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>450</width>
-         <height>760</height>
+         <width>444</width>
+         <height>777</height>
         </rect>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -352,6 +352,13 @@
                  </property>
                  <property name="text">
                   <string>Force XDMF generation</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="4" column="0">
+                <widget class="QCheckBox" name="hasTimeInfo">
+                 <property name="text">
+                  <string>Use Time Information</string>
                  </property>
                 </widget>
                </item>
