--- a/pqDSMViewerPanel.ui
+++ b/pqDSMViewerPanel.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>463</width>
-    <height>701</height>
+    <height>899</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -28,8 +28,8 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>444</width>
-         <height>777</height>
+         <width>445</width>
+         <height>859</height>
         </rect>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -610,10 +610,30 @@
                  </property>
                 </widget>
                </item>
-               <item row="0" column="2">
+               <item row="0" column="3">
                 <widget class="QToolButton" name="dsmWriteDisk">
                  <property name="text">
-                  <string>Switch DSM/Disk</string>
+                  <string>DSM/Disk</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="0" column="4">
+                <widget class="QLineEdit" name="infoCurrentSteeringCommand">
+                 <property name="sizePolicy">
+                  <sizepolicy hsizetype="Ignored" vsizetype="Fixed">
+                   <horstretch>0</horstretch>
+                   <verstretch>0</verstretch>
+                  </sizepolicy>
+                 </property>
+                 <property name="readOnly">
+                  <bool>true</bool>
+                 </property>
+                </widget>
+               </item>
+               <item row="0" column="2">
+                <widget class="QCheckBox" name="acceptIsPlay">
+                 <property name="text">
+                  <string>Accept resumes</string>
                  </property>
                 </widget>
                </item>
@@ -621,12 +641,12 @@
              </widget>
             </item>
             <item>
-                <widget class="QLineEdit" name="infoCurrentSteeringCommand">
-                 <property name="readOnly">
-                  <bool>true</bool>
-                 </property>
-                </widget>
-               </item>
+             <layout class="QVBoxLayout" name="generatedLayout" stretch="">
+              <property name="sizeConstraint">
+               <enum>QLayout::SetMaximumSize</enum>
+              </property>
+             </layout>
+            </item>
             <item>
              <widget class="QTreeWidget" name="dsmArrayTreeWidget">
               <property name="sizePolicy">
@@ -635,15 +655,24 @@
                 <verstretch>0</verstretch>
                </sizepolicy>
               </property>
+              <property name="minimumSize">
+               <size>
+                <width>0</width>
+                <height>16</height>
+               </size>
+              </property>
+              <property name="maximumSize">
+               <size>
+                <width>16777215</width>
+                <height>16777215</height>
+               </size>
+              </property>
               <column>
                <property name="text">
                 <string>Cell/Point Array Status</string>
-              </property>
+               </property>
               </column>
              </widget>
-            </item>
-            <item>
-             <layout class="QVBoxLayout" name="generatedLayout"/>
             </item>
            </layout>
           </widget>
