--- a/pqDSMViewerPanel.ui
+++ b/pqDSMViewerPanel.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>463</width>
-    <height>759</height>
+    <width>467</width>
+    <height>790</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,6 +15,12 @@
   </property>
   <widget class="QWidget" name="dockWidgetContents">
    <layout class="QVBoxLayout" name="verticalLayout">
+    <property name="spacing">
+     <number>0</number>
+    </property>
+    <property name="margin">
+     <number>0</number>
+    </property>
     <item>
      <widget class="QScrollArea" name="scrollArea">
       <property name="frameShape">
@@ -28,18 +34,24 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>445</width>
-         <height>716</height>
+         <width>467</width>
+         <height>768</height>
         </rect>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_4">
         <item>
          <widget class="QTabWidget" name="tabWidget">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+            <horstretch>0</horstretch>
+            <verstretch>1</verstretch>
+           </sizepolicy>
+          </property>
           <property name="tabPosition">
            <enum>QTabWidget::West</enum>
           </property>
           <property name="currentIndex">
-           <number>0</number>
+           <number>2</number>
           </property>
           <property name="elideMode">
            <enum>Qt::ElideRight</enum>
@@ -459,7 +471,7 @@
             </item>
            </layout>
           </widget>
-          <widget class="QWidget" name="advancedTab">
+          <widget class="QWidget" name="tab">
            <attribute name="title">
             <string>Advanced Controls</string>
            </attribute>
@@ -491,63 +503,6 @@
               <property name="text">
                <string>Store Time Step</string>
               </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QGroupBox" name="standardControlBox">
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="title">
-               <string>Stream Controls</string>
-              </property>
-              <layout class="QGridLayout" name="gridLayout_2">
-               <item row="0" column="0">
-                <widget class="QToolButton" name="scPause">
-                 <property name="text">
-                  <string>pause</string>
-                 </property>
-                 <property name="icon">
-                  <iconset>
-                   <normaloff>:/pqWidgets/Icons/pqVcrPause24.png</normaloff>:/pqWidgets/Icons/pqVcrPause24.png</iconset>
-                 </property>
-                </widget>
-               </item>
-               <item row="0" column="1">
-                <widget class="QToolButton" name="scPlay">
-                 <property name="text">
-                  <string>play</string>
-                 </property>
-                 <property name="icon">
-                  <iconset>
-                   <normaloff>:/pqWidgets/Icons/pqVcrPlay24.png</normaloff>:/pqWidgets/Icons/pqVcrPlay24.png</iconset>
-                 </property>
-                </widget>
-               </item>
-               <item row="0" column="3">
-                <widget class="QToolButton" name="dsmWriteDisk">
-                 <property name="text">
-                  <string>DSM/Disk</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="0" column="4">
-                <widget class="QLineEdit" name="infoCurrentSteeringCommand">
-                 <property name="sizePolicy">
-                  <sizepolicy hsizetype="Ignored" vsizetype="Fixed">
-                   <horstretch>0</horstretch>
-                   <verstretch>0</verstretch>
-                  </sizepolicy>
-                 </property>
-                 <property name="readOnly">
-                  <bool>true</bool>
-                 </property>
-                </widget>
-               </item>
-              </layout>
              </widget>
             </item>
             <item>
@@ -623,26 +578,13 @@
                   </sizepolicy>
                  </property>
                  <property name="toolTip">
-                  <string/>
+                  <string>Save an image after every new data triggered render</string>
                  </property>
                  <property name="text">
                   <string>Auto-Run Python Script</string>
                  </property>
                  <property name="checked">
                   <bool>false</bool>
-                 </property>
-                </widget>
-               </item>
-               <item row="0" column="2">
-                <widget class="QPushButton" name="browseScript">
-                 <property name="sizePolicy">
-                  <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-                   <horstretch>0</horstretch>
-                   <verstretch>0</verstretch>
-                  </sizepolicy>
-                 </property>
-                 <property name="text">
-                  <string>Browse...</string>
                  </property>
                 </widget>
                </item>
@@ -660,6 +602,19 @@
                    <horstretch>0</horstretch>
                    <verstretch>0</verstretch>
                   </sizepolicy>
+                 </property>
+                </widget>
+               </item>
+               <item row="0" column="2">
+                <widget class="QPushButton" name="browseScript">
+                 <property name="sizePolicy">
+                  <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+                   <horstretch>0</horstretch>
+                   <verstretch>0</verstretch>
+                  </sizepolicy>
+                 </property>
+                 <property name="text">
+                  <string>Browse...</string>
                  </property>
                 </widget>
                </item>
@@ -681,7 +636,7 @@
                   </sizepolicy>
                  </property>
                  <property name="toolTip">
-                  <string/>
+                  <string>Save an image after every new data triggered render</string>
                  </property>
                  <property name="text">
                   <string>Re-Export Data every update</string>
@@ -725,28 +680,80 @@
              </widget>
             </item>
             <item>
-             <widget class="QLabel" name="label">
+             <widget class="QGroupBox" name="standardControlBox">
               <property name="sizePolicy">
-               <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+               <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
                 <horstretch>0</horstretch>
                 <verstretch>0</verstretch>
                </sizepolicy>
               </property>
-              <property name="text">
-               <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Sans'; font-size:10pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Generated Steering Controls&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+              <property name="title">
+               <string>Stream Controls</string>
               </property>
+              <layout class="QGridLayout" name="gridLayout_2">
+               <item row="0" column="0">
+                <widget class="QToolButton" name="scPause">
+                 <property name="text">
+                  <string>pause</string>
+                 </property>
+                 <property name="icon">
+                  <iconset>
+                   <normaloff>:/pqWidgets/Icons/pqVcrPause24.png</normaloff>:/pqWidgets/Icons/pqVcrPause24.png</iconset>
+                 </property>
+                </widget>
+               </item>
+               <item row="0" column="1">
+                <widget class="QToolButton" name="scPlay">
+                 <property name="text">
+                  <string>play</string>
+                 </property>
+                 <property name="icon">
+                  <iconset>
+                   <normaloff>:/pqWidgets/Icons/pqVcrPlay24.png</normaloff>:/pqWidgets/Icons/pqVcrPlay24.png</iconset>
+                 </property>
+                </widget>
+               </item>
+               <item row="0" column="2">
+                <widget class="QToolButton" name="dsmWriteDisk">
+                 <property name="text">
+                  <string>DSM/Disk</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="0" column="3">
+                <widget class="QLineEdit" name="infoCurrentSteeringCommand">
+                 <property name="sizePolicy">
+                  <sizepolicy hsizetype="Ignored" vsizetype="Fixed">
+                   <horstretch>0</horstretch>
+                   <verstretch>0</verstretch>
+                  </sizepolicy>
+                 </property>
+                 <property name="readOnly">
+                  <bool>true</bool>
+                 </property>
+                </widget>
+               </item>
+              </layout>
              </widget>
             </item>
             <item>
-             <layout class="QVBoxLayout" name="generatedLayout">
-              <property name="sizeConstraint">
-               <enum>QLayout::SetMinAndMaxSize</enum>
+             <layout class="QVBoxLayout" name="generatedLayout"/>
+            </item>
+            <item>
+             <spacer name="verticalSpacer_4">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
               </property>
-             </layout>
+              <property name="sizeType">
+               <enum>QSizePolicy::Preferred</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>0</height>
+               </size>
+              </property>
+             </spacer>
             </item>
            </layout>
           </widget>
