--- a/pqDsmViewerPanel.ui
+++ b/pqDsmViewerPanel.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>DSMViewerPanel</class>
- <widget class="QDockWidget" name="DSMViewerPanel">
+ <class>DsmViewerPanel</class>
+ <widget class="QDockWidget" name="DsmViewerPanel">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>DSMViewerPanel</string>
+   <string>DsmViewerPanel</string>
   </property>
   <widget class="QWidget" name="dockWidgetContents">
    <layout class="QVBoxLayout" name="verticalLayout">
@@ -80,7 +80,7 @@
                 <number>6</number>
                </property>
                <item row="6" column="0" colspan="3">
-                <widget class="QPushButton" name="unpublishDSM">
+                <widget class="QPushButton" name="unpublish">
                  <property name="sizePolicy">
                   <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
                    <horstretch>0</horstretch>
@@ -93,7 +93,7 @@
                 </widget>
                </item>
                <item row="5" column="0" colspan="3">
-                <widget class="QPushButton" name="publishDSM">
+                <widget class="QPushButton" name="publish">
                  <property name="sizePolicy">
                   <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
                    <horstretch>0</horstretch>
@@ -251,7 +251,7 @@
                 </widget>
                </item>
                <item row="1" column="2">
-                <widget class="QToolButton" name="addServerDSM">
+                <widget class="QToolButton" name="addDsmServer">
                  <property name="enabled">
                   <bool>true</bool>
                  </property>
@@ -493,7 +493,7 @@
              </widget>
             </item>
             <item>
-             <widget class="QCheckBox" name="storeDSMContents">
+             <widget class="QCheckBox" name="storeDsmContents">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
                 <horstretch>0</horstretch>
