--- a/pqDsmViewerPanel.ui
+++ b/pqDsmViewerPanel.ui
@@ -35,7 +35,7 @@
          <x>0</x>
          <y>0</y>
          <width>467</width>
-         <height>768</height>
+         <height>765</height>
         </rect>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -79,7 +79,7 @@
                <property name="horizontalSpacing">
                 <number>6</number>
                </property>
-               <item row="6" column="0" colspan="3">
+               <item row="7" column="0" colspan="3">
                 <widget class="QPushButton" name="unpublish">
                  <property name="sizePolicy">
                   <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
@@ -92,7 +92,7 @@
                  </property>
                 </widget>
                </item>
-               <item row="5" column="0" colspan="3">
+               <item row="6" column="0" colspan="3">
                 <widget class="QPushButton" name="publish">
                  <property name="sizePolicy">
                   <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
@@ -274,6 +274,13 @@
                  </property>
                  <property name="text">
                   <string>Port number</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="5" column="0" colspan="3">
+                <widget class="QCheckBox" name="staticInterCommBox">
+                 <property name="text">
+                  <string>Use Static Inter-Communicator</string>
                  </property>
                 </widget>
                </item>
