Support netCDF. Many changes to improve pipeline updates/time.

--- a/pqDsmViewerPanel.ui
+++ b/pqDsmViewerPanel.ui
@@ -35,7 +35,7 @@
          <x>0</x>
          <y>0</y>
          <width>467</width>
-         <height>765</height>
+         <height>768</height>
         </rect>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -439,7 +439,7 @@
                 </widget>
                </item>
                <item row="4" column="0">
-                <widget class="QCheckBox" name="hasTimeInfo">
+                <widget class="QCheckBox" name="useTimeInfo">
                  <property name="text">
                   <string>Use Time Information</string>
                  </property>
@@ -842,7 +842,7 @@
             <item>
              <widget class="QGroupBox" name="sourceBox">
               <property name="enabled">
-               <bool>false</bool>
+               <bool>true</bool>
               </property>
               <property name="sizePolicy">
                <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
